# robbie-the-robot-arm

./: .gitignore  README.md
V1/: buttons_robot_arm_control.ino
V2/: README.md
V2/client/: control.html  control.js  index.html  index.js  style.css
V2/server/: robot_arm_control_HTTP.ino
V3/: Dockerfile  README.md
V3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
V3/install/robbie_simulator/lib/robbie_simulator/: move_robot_arm.py
V3/install/robbie_simulator/share/robbie_simulator/: local_setup.dsv  package.bash  package.ps1  package.sh  package.xml
V3/log/: latest_build
V3/robbie_simulator/: package.xml  setup.cfg  setup.py
V3/robbie_simulator/launch/: robot_description_launch.py
V3/robbie_simulator/robbie_simulator/: joint_state_publisher_gui.py
V3/robbie_simulator/rviz2/: robbie.rviz
V3/robbie_simulator/urdf/: robbie.urdf
V3/src/robbie_simulator/: CMakeLists.txt  package.xml
V3/src/robbie_simulator/src/launch/: display.launch.py  joint_state_publisher_launch.py  robot_description_launch.py  robot_description_path.launch.py
V3/src/robbie_simulator/src/rviz/: robbie.rviz
V3/src/robbie_simulator/src/scripts/: joint_state_publisher_gui.py  move_robot_arm.py  move_robot_command_node.py  robot_controller_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robbie_simulator/share/robbie_simulator/: package.dsv  package.sh  package.xml  package.zsh
install/robbie_simulator/share/robbie_simulator/launch/: display.launch.py
(+5 files in other folders)
